[tool.poetry]
name = "notion-doc-llm"
version = "0.1.0"
description = ""
authors = ["daviddecastilla <daviddecastilla@gmail.com>"]
readme = "README.md"
packages = [{include = "notion_doc_llm"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.1.14"
dynaconf = "^3.2.5"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
